--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <p>
-            En esta página se generó un CRUD para distintas las siguientes rutas:
+            En esta página se generó un CRUD para las siguientes rutas:
         </p>
         <ul>
             <li>Usuarios(/usuarios)</li>
@@ -21,14 +21,14 @@
             <li>Falta Uno(/faltauno)</li>
         </ul>
         <p>
-            La temática elegida son las creacion de solicitudes para buscar jugadores de distintos deportes. La idea es que yo, por ejemplo, reservé una cancha de futbol, tenis, o paddle, etc, y me falta alguna persona para completar el equipo. Entonces recurro a generar una solicitud donde le envio varios parametros y asi lo publico, en este caso, en una base de datos.
+            La temática elegida es las creacion de solicitudes para buscar jugadores de distintos deportes. La idea es que yo, por ejemplo, reservé una cancha de futbol, tenis, o paddle, etc, y me falta alguna persona para completar el equipo. Entonces recurro a generar una solicitud donde le envio varios parametros y asi lo publico; En este caso, en una base de datos.
         </p>
     </main>
 
     <footer>
         <p><b>Desarrollador:</b> Gonzalo Gómez</p>
         <p><b>Materia:</b> Aplicaciones Híbridas</p>
-        <p><b>Profesora:</b> Camila Marcos Galban</p>
+        <p><b>Profesora:</b> Camila Belén Marcos Galbán</p>
         <p><b>Comision:</b> DWN4AP</p>
         <p><b>Año:</b> 2023</p>
     </footer>
